# python-snippets

./: .gitignore  CHANGELOG.md  LICENSE  README.md
argparse-demo/: argparse_demo.py
argparse_demo/: README.md  argparse_demo.py  pyproject.toml
cache-func-execution/: cache_func_execution.py
cache_func_execution/: README.md  cache_func_execution.py  pyproject.toml
check-is-number/: NumInput.py  NumInput2.py
check_is_number/: README.md  num_input.py  num_input_2.py  pyproject.toml
controlling_servo_motors/: README.md  main.py  pyproject.toml
demo_terminal_colors/: README.md  pyproject.toml  terminal_colors.py
elapsed_time/: README.md  elapsed_time.py  pyproject.toml
exit-script/: UsingAtExit.py  UsingTryCath.py
exit_script/: README.md  pyproject.toml  using_at_exit.py  using_try_catch.py
extract-lines/: extract_lines.py
extract_lines/: README.md  extract_lines.py  pyproject.toml
file_renaming/: README.md  pyproject.toml  readme.md  rename_files.py
fun-with-dates/: convert_str_to_datetime.py  get_uptime.py  relative_dates.py
fun_with_dates/: README.md  convert_str_to_datetime.py  get_uptime.py  pyproject.toml  relative_dates.py
get-addr-by-cep/: GetAddr01.py  GetAddr02.py  GetAddr03.py  GetAddr04.py  GetAddr05.py
get-computer-info/: get_server_info.py
get-path/: mainscript.py
get_addr_by_cep/: README.md  get_addr_01.py  get_addr_02.py  get_addr_03.py  get_addr_04.py  get_addr_05.py  pyproject.toml
obtain_google_oauth2_refresh_token/: README.md  get_refresh_token.py  pyproject.toml
open_ai_generate_image_and_resize/: README.md  openai_gen_image_and_resize.py  pyproject.toml
web_scraping_simple_example/: README.md  old_resources.json  pyproject.toml  scrapping.py
(+90 files in other folders)
