[project]
name = "openai-generate-image-and-resize"
version = "1.0.0"
description = "Generate images with OpenAI DALL-E and create resized variants using Pillow."
requires-python = ">=3.10"
dependencies = [
    "openai==1.82.0",
    "Pillow==12.2.0",
    "requests==2.34.2",
    # Not used directly. Just to fix it while requests don't catch up to CVE-2024-3651
    "idna==3.18"
]
