[project]
name = "web-scraping-simple-example"
version = "1.0.0"
description = "Scrape Azure resource naming conventions and generate a Markdown cheatsheet."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.13.4",
    "requests==2.34.2",
    # Not used directly. Just to fix it while requests don't catch up to CVE-2024-3651
    "idna==3.18",
    "tabulate==0.9.0",
]
